@@ -3,6 +3,7 @@
 * fixed io validation to not duplicate IOs
 * fixed :hidden type for nested configurations
 * open_io now returns block result
+* updated Validation parsing of strings into ranges
 
 == 0.4.2 / 2009-03-30
 
